--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Buổi 2- Research Flexbox</title>
     <link rel="stylesheet" href="1.css">
 </head>
+
 <body>
     <div class="header">
         <ul class="nav">
@@ -19,8 +21,10 @@
         </ul>
     </div>
     <div class="content">
-        Get API from US
+        <h1>Get API from US</h1>
     </div>
-    <script src="1.js"></script>
+    <ul id='holidays'>
+        <script src="1.js"></script>
 </body>
+
 </html>
