--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buổi 2- Research Flexbox</title>
+    <title>The Movie Database (TMDB)</title>
     <link rel="stylesheet" href="1.css">
 </head>
 
 <body>
+   <header>
     <div class="header">
         <ul class="nav">
             <li><a style="justify-content: space-between;">Home</a></li>
@@ -20,10 +21,32 @@
             <li><a>Contact</a></li>
         </ul>
     </div>
-    <div class="content">
-        <h1>Get API from US</h1>
-    </div>
-    <ul id='holidays'>
+   </header>
+    <footer class="footer">
+        <ul>JOIN THE COMMUNITY
+            <li>About TMDB</li>
+            <li>Contact Us</li>
+            <li>Support Forums</li>
+            <li>API</li>
+            <li>System Status</li>
+        </ul> <br>
+        <ul> THE BASICS
+            <li>Contribution Bible</li>
+            <li>Add New Movie</li>
+            <li>Add New TV Show</li>
+        </ul> <br>
+        <ul> COMMUNITY
+            <li>Guidelines</li>
+            <li>Discussions</li>
+            <li>Leaderboard</li>
+            <li>Twitter</li>
+        </ul> <br>
+        <ul>LEGAL
+            <li>Terms of Use</li>
+            <li>API Terms of Use</li>
+            <li>Privacy 
+        </ul> <br>
+    </footer>
         <script src="1.js"></script>
 </body>
 
