--- a/index.html
+++ b/index.html
@@ -8,46 +8,56 @@
     <title>The Movie Database (TMDB)</title>
     <link rel="stylesheet" href="1.css">
 </head>
-
 <body>
-   <header>
-    <div class="header">
-        <ul class="nav">
-            <li><a style="justify-content: space-between;">Home</a></li>
-            <li><a>Shop</a></li>
-            <li><a>Blog</a></li>
-            <li><a>About</a></li>
-            <li><a>Products</a></li>
-            <li><a>Contact</a></li>
-        </ul>
-    </div>
-   </header>
-    <footer class="footer">
-        <ul>JOIN THE COMMUNITY
-            <li>About TMDB</li>
-            <li>Contact Us</li>
-            <li>Support Forums</li>
-            <li>API</li>
-            <li>System Status</li>
-        </ul> <br>
-        <ul> THE BASICS
-            <li>Contribution Bible</li>
-            <li>Add New Movie</li>
-            <li>Add New TV Show</li>
-        </ul> <br>
-        <ul> COMMUNITY
-            <li>Guidelines</li>
-            <li>Discussions</li>
-            <li>Leaderboard</li>
-            <li>Twitter</li>
-        </ul> <br>
-        <ul>LEGAL
-            <li>Terms of Use</li>
-            <li>API Terms of Use</li>
-            <li>Privacy 
-        </ul> <br>
+    <header>
+        <div class="header">
+            <ul class="nav">
+                <li><a style="justify-content: space-between;">Home</a></li>
+                <li><a>Shop</a></li>
+                <li><a>Blog</a></li>
+                <li><a>About</a></li>
+                <li><a>Products</a></li>
+                <li><a>Contact</a></li>
+            </ul>
+        </div>
+    </header>
+    <footer>
+        <div>
+            <h3>JOIN THE COMMUNITY</h3>
+            <ul class="abc">
+                <li>About TMDB</li>
+                <li>Contact Us</li>
+                <li>Support Forums</li>
+                <li>API</li>
+                <li>System Status</li>
+            </ul>
+        </div>
+        <div>
+            <h3>THE BASICS</h3>
+            <ul>
+                <li>Contribution Bible</li>
+                <li>Add New Movie</li>
+                <li>Add New TV Show</li>
+            </ul>
+        </div>
+        <div>
+            <h3> COMMUNITY</h3>
+            <ul>
+                <li>Guidelines</li>
+                <li>Discussions</li>
+                <li>Leaderboard</li>
+                <li>Twitter</li>
+            </ul>
+        </div>
+        <div>
+            <h3>LEGAL</h3>
+            <ul>
+                <li>Terms of Use</li>
+                <li>API Terms of Use</li>
+                <li>Privacy
+            </ul>
+        </div>
     </footer>
-        <script src="1.js"></script>
+    <script src="1.js"></script>
 </body>
-
 </html>
